# score2musicxml

./: README.md  pyproject.toml
score2musicxml/: cli.py  instruments.py  merge.py  pdf_to_images.py  pipeline.py  postprocess.py  recognize.py
score2musicxml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
